# multigrid-solver

./: .gitignore  CMakeLists.txt  README.md
.github/workflow/: ci.yml
data/: config.yaml  convergence_history.csv  params.yaml  residuals_norm.csv  solutions.csv
example/: convergence_history_F33_RGBS.csv  convergence_history_V33_RGBS.csv  convergence_history_W33_RGBS.csv  grid_points.csv  solutions_F33_RGBS.csv  solutions_V33_RGBS.csv  solutions_W33_RGBS.csv
plotting/: main.py  plot_convergence_history.py  plot_example.py  plot_solution.py  requirements.txt
python/: main.py  plot_residuals_norm.py  requirements.txt
src/: FDM.hpp  alias.hpp  boundary_condition.hpp  common.hpp  config.hpp  cycle.cpp  cycle.hpp  grid_init.cpp  grid_init.hpp  logger.hpp  main.cpp  multigrid.cpp  multigrid.hpp  multigrid_old.cpp  multigrid_old.hpp  multigrid_operations.cpp  multigrid_operations.hpp  norm.hpp  operators.hpp  restriction.hpp  setup.hpp  smoother.cpp  smoother.hpp  smoother_param.hpp  solver.cpp  solver.hpp  stencil.hpp  stencils.hpp  type_alias.hpp
src/common/: boundary_condition.hpp  domain.hpp  io.hpp  logger.hpp  norm.hpp  smoother_param.hpp  type_alias.hpp
src/multigrid/: cycle.cpp  cycle.hpp  grid.hpp  init_grids.cpp  init_grids.hpp  operations.cpp  operations.hpp  pde.hpp  run.cpp  run.hpp  smoother.cpp  smoother.hpp
src/multigrid/cartesian_1d/: cycle.cpp  cycle.hpp  grid.hpp  init_grids.cpp  init_grids.hpp  operations.cpp  operations.hpp  pde.hpp  run.cpp  run.hpp  smoother.cpp  smoother.hpp
src/multigrid/cartesian_2d/: grid.hpp  init_grids.cpp  init_grids.hpp
src/old/: FDM.hpp  domain.hpp  grid.hpp  grid_init.hpp  multigrid.hpp  multigrid_operations.cpp  prolongation.hpp  solver_old.cpp  solver_old.hpp  type_alias.hpp
tests/: test_grid_init.cpp  test_init_grids.cpp  test_multigrid.cpp  test_multigrid_operations.cpp  test_operations.cpp  test_solver.cpp  test_solver_old.cpp
